force-app/main/default/objects/E_MOC_Monitoring_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Monitoring__c</fullName>
        <label>Date_Monitoring</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>E_MOC_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>E-MOC Activity</label>
        <referenceTo>E_MOC_Activity__c</referenceTo>
        <relationshipName>E_MOC_Sub_Activity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>E_MOC_Application_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>E-MOC Application No.</label>
        <referenceTo>E_MOC_Application__c</referenceTo>
        <relationshipLabel>E-MOC Monitoring Activity</relationshipLabel>
        <relationshipName>Activity_TemporaryWorkFlow</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monitoring_result_Not_Pass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Pass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monitoring_result_Pass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monitoring_result_description__c</fullName>
        <label>Monitoring result  description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Remark</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <label>E-MOC Monitoring Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>E_MOC_Application_No__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Attachment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Activity</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>